added link in index page

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
   <title>AL Jazeera Limousine Service | Book Your Ride </title>
 
-  <link rel="icon" type="image/x-icon" href="images/favicon 2.png">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon 2.png">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="./assets/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="./assets/css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a style="width: 100px;" class="navbar-brand" href="/">
             <span>
-              <img style="width: 175%;" src="images/logo.png" alt="">
+              <img style="width: 175%;" src="./assets/images/logo.png" alt="">
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -99,7 +99,7 @@
                   <div class="carousel-item active">
 
                     <div class="img-box">
-                      <img src="images/taxi_service_03.png" alt="">
+                      <img src="./assets/images/taxi_service_03.png" alt="">
                     </div>
                   </div>
                   <!-- <div class="carousel-item">
@@ -144,10 +144,10 @@
                   <button type="submit">Book Now</button>
                 </div>
                 <p style="color:green; font-size: 20px;">
-                  <%=sucess%>
+                  
                 </p>
                 <p style="color:red; font-size: 20px;">
-                  <%=failure%>
+                  
                 </p>
               </form>
             </div>
@@ -184,7 +184,7 @@
         </div>
         <div class="col-md-6">
           <div class="img-box">
-            <img src="/images/1.png" alt="">
+            <img src="./assets//images/1.png" alt="">
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
       <div class="service_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/delivery-man.png" alt="">
+            <img src="./assets/images/delivery-man.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -216,7 +216,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/airplane.png" alt="">
+            <img src="./assets/images/airplane.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -227,7 +227,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/backpack.png" alt="">
+            <img src="./assets/images/backpack.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -260,7 +260,7 @@
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-2.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-2.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -270,14 +270,14 @@
                     It was very nice trip with you guys! Enterair crew will recommend you every time. See you again!
                     <br><br><br><br>
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-3.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-3.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -295,7 +295,7 @@
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-1.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-1.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -306,14 +306,14 @@
                     timely and fast response on my queries , and very affordable prices. Will use them again whenever
                     needed...
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-7.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-7.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -323,14 +323,14 @@
                     Amazing trip! Very comfortable cars! I highly recommend. They approach everything professionally.
                     <br><br><br>
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-5.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-5.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -341,14 +341,14 @@
                     company which have made me to highly recommend with a 5-Star rating ..... wishing a best future for
                     this company and hoping to avail your service again shortly
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-4.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-4.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -362,7 +362,7 @@
                     everywhere you want, any location. Strongly recommend!
                     We are still friends.
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
@@ -370,7 +370,7 @@
             <div class="item">
               <div class="box">
                 <div class="img-box">
-                  <img style="width: 90px;" src="images/client-6.png" alt="">
+                  <img style="width: 90px;" src="./assets/images/client-6.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h3>
@@ -383,7 +383,7 @@
                     staff is very professional, although they almost do not know Russian, but there is no language
                     barrier if you do not know much English). Cars are all clean and tidy.
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
@@ -426,7 +426,7 @@
         </div>
         <div class="col-md-6 px-0">
           <div class="img-box">
-            <img src="images/5124557.png" alt="">
+            <img src="./assets/images/5124557.png" alt="">
           </div>
         </div>
       </div>
@@ -447,8 +447,8 @@
       <div class="why_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/delivery-man-white.png" alt="" class="img-1">
-            <img src="images/delivery-man-black.png" alt="" class="img-2">
+            <img src="./assets/images/delivery-man-white.png" alt="" class="img-1">
+            <img src="./assets/images/delivery-man-black.png" alt="" class="img-2">
           </div>
           <div class="detail-box">
             <h5>
@@ -462,8 +462,8 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/shield-white.png" alt="" class="img-1">
-            <img src="images/shield-black.png" alt="" class="img-2">
+            <img src="./assets/images/shield-white.png" alt="" class="img-1">
+            <img src="./assets/images/shield-black.png" alt="" class="img-2">
           </div>
           <div class="detail-box">
             <h5>
@@ -477,8 +477,8 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/repairing-service-white.png" alt="" class="img-1">
-            <img src="images/repairing-service-black.png" alt="" class="img-2">
+            <img src="i./assets/mages/repairing-service-white.png" alt="" class="img-1">
+            <img src="./assets/images/repairing-service-black.png" alt="" class="img-2">
           </div>
           <div class="detail-box">
             <h5>
@@ -517,7 +517,7 @@
         <div class="info_social">
 
           <a href="https://www.instagram.com/aljazeera_limousine/?hl=en">
-            <img src="images/instagram.png" alt="">
+            <img src="./assets/images/instagram.png" alt="">
           </a>
         </div>
       </div>
@@ -540,8 +540,8 @@
   </section>
   <!-- footer section -->
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="./assets/js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="./assets/js/bootstrap.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
 
