--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,8 @@
               <input type="email" name="email" placeholder="Email" required>
               <input type="text" name="msg" placeholder="Message" class="message_input" required>
               <button type="submit">Send</button>
-              <p style="color:green; font-size: 20px;"><%=sucess%></p>
-              <p style="color:red; font-size: 20px;"><%=failure%></p>
+              <p style="color:green; font-size: 20px;"></p>
+              <p style="color:red; font-size: 20px;"></p>
           </div>
         </div>
         <div class="col-md-6 px-0">
