added link in about page

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="i./assets/mages/repairing-service-white.png" alt="" class="img-1">
+            <img src="./assets/images/repairing-service-white.png" alt="" class="img-1">
             <img src="./assets/images/repairing-service-black.png" alt="" class="img-2">
           </div>
           <div class="detail-box">
