--- a/service.html
+++ b/service.html
@@ -19,15 +19,15 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="./assets/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="./assets/css/responsive.css" rel="stylesheet" />
 </head>
 
 <body class="sub_page">
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a style="width: 100px;" class="navbar-brand" href="/">
             <span>
-            <img style="width: 175%;" src="images/logo.png" alt="">
+            <img style="width: 175%;" src="./assets/images/logo.png" alt="">
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -128,7 +128,7 @@
         <div class="info_social">
           
             <a href="https://www.instagram.com/aljazeera_limousine/?hl=en">
-              <img src="images/instagram.png" alt="">
+              <img src="./assets/images/instagram.png" alt="">
             </a>
           </div>
         </div>
@@ -151,8 +151,8 @@
   </section>
   <!-- footer section -->
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="./assets/js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="./assets/js/bootstrap.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
 
