fixed image bug

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     with Dubai and Abu Zabi - unforgettable impressions! I hope for the next trips with kind drivers. I
                     heartily recommend it!!!
                   </p>
-                  <img src="images/quote.png" alt="">
+                  <img src="./assets/images/quote.png" alt="">
                 </div>
               </div>
             </div>
